manifest/app/base/namespace.yaml
---
# Namespace for ExpressCart Application
apiVersion: v1
kind: Namespace
metadata:
  name: expresscart
